Parquet-Best-practices-demonstration.md

--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -6,6 +6,25 @@ permalink: /talks/Parquet-Storage-Standard
 date: 2024-02-01
 ---
 
+# Parquet - a widely adopted standard file format
+
+A often overlooked feature of Parquet is its support for Interoperability which is key to enterprise data plaforms which serves different tools and systems, facilitating data exchange and integration.
+Below are my take on Parquet best practices and I have used python-pyarrow to demonstrate them.
+
+Focus is on
+1. Use  Appropriate Data Types
+    1.1 Date and Time:
+    1.2 Avoid Nulls When Possible
+    1.3 Numerical Data
+2. Leverage Compression and Encoding
+    2.1 Dictionary Encoding
+    2.2 Run-Length and Delta Encoding
+3. Partitioning
+4. Nested Data Structures
+5. Schema Evolution
+
+The data can be found in
+
 ```python
 import pandas as pd
 import pyarrow as pyar
@@ -18,7 +37,8 @@ import pyarrow.csv as pyarcsv
 To save time creating the schema, we can use the schema which pyarrow automatically generates. 
 However it would not be ideal and we would need to redesign the schema based on the best practices.
 Though Parquet stores the schema along the with the data, Pyarrow uses a seperate Schema object to manage the schama. This schema can also be seperately saved and managed.
-Also as a baseline we will save it as a Parquet and also save the schema as .metadata and redesign the schema
+Also as a baseline we will save it as a Parquet and also save the schema as .metadata and redesign the schema.
+The schema of tables are printed for reference.
 
 
 ```python
@@ -38,6 +58,7 @@ def parse_schema(schema_str):
         pa_type = type_mapping[type_str]
         fields.append(pyar.field(name, pa_type))
     return pyar.schema(fields)
+    
 def parseTables():
     tables = ['Addresses','BusinessPartners','ProductCategories','ProductCategoryText','Products','ProductTexts','SalesOrderItems','SalesOrders','Employees']
     for tableName in tables:
@@ -55,6 +76,7 @@ def parseTables():
         pyarpq.write_table(table_parquet_table, 'Data/'+tableName+ '.parquet')
 
 parseTables();
+
 ```
 
     _____________ Addresses__________________
@@ -76,8 +98,13 @@ parseTables();
     _____________ Employees__________________
     EMPLOYEEID: int64,NAME_FIRST: string,NAME_MIDDLE: string,NAME_LAST: string,NAME_INITIALS: string,SEX: string,LANGUAGE: string,PHONENUMBER: string,EMAILADDRESS: string,LOGINNAME: string,ADDRESSID: int64,VALIDITY_STARTDATE: int64,VALIDITY_ENDDATE: int64
 
+    
+![image](https://github.com/nuneskris/nuneskris.github.io/assets/82786764/7a730e9f-6946-4a86-ab2d-552b28876875)
 
-We will be focusing on SalesOrders and slowly improve on the schema
+
+
+
+We will be focusing on SalesOrders and slowly improve on the schema to demonstrate the first few best practices.
 
 
 ```python
@@ -191,13 +218,11 @@ Step 3: # Convert the DataFrame to a PyArrow Table using the updated schema and 
 
 ```python
 file = pyarpq.ParquetFile('Data/SalesOrders.parquet')
-file.schema
+print(f"There is a schema which is embedded within the parquet file \n {file.schema}");
 ```
 
-
-
-
-    <pyarrow._parquet.ParquetSchema object at 0x12642db00>
+    There is a schema which is embedded within the parquet file 
+     <pyarrow._parquet.ParquetSchema object at 0x11a366d80>
     required group field_id=-1 schema {
       optional int64 field_id=-1 SALESORDERID;
       optional int64 field_id=-1 CREATEDBY;
@@ -217,7 +242,7 @@ file.schema
       optional binary field_id=-1 BILLINGSTATUS (String);
       optional binary field_id=-1 DELIVERYSTATUS (String);
     }
-
+    
 
 
 
@@ -241,22 +266,31 @@ pyarpq.write_table(
     'Data/SalesOrders.parquet'
 )
 pyarpq.write_metadata(myschema,'Data/SalesOrders.metadata')
+# printing the metadata so we are replacing newlines to read it easily
 updatedSchema = myschema.to_string().replace('\n',',')
-print(f"the new updated schema --> CREATEDAT and CHANGEDAT are updated to date32 format \n {updatedSchema}")
+
+print(f"the new updated schema --> CREATEDAT and CHANGEDAT are updated to date32 format ")
+print('----------------------------------------------------------------------------------------------------------')
+print(updatedSchema)
 updatedParquetfile = pyarpq.ParquetFile('Data/SalesOrders.parquet')
+print('----------------------------------------------------------------------------------------------------------')
 print('Even the schema on attached to the parquet file is updated.')
+print('----------------------------------------------------------------------------------------------------------')
 updatedParquetfile.schema
 ```
 
     the new updated schema --> CREATEDAT and CHANGEDAT are updated to date32 format 
-     SALESORDERID: int64,CREATEDBY: int64,CREATEDAT: date32[day],CHANGEDBY: int64,CHANGEDAT: date32[day],FISCVARIANT: string,FISCALYEARPERIOD: int64,NOTEID: string,PARTNERID: int64,SALESORG: string,CURRENCY: string,GROSSAMOUNT: int64,NETAMOUNT: double,TAXAMOUNT: double,LIFECYCLESTATUS: string,BILLINGSTATUS: string,DELIVERYSTATUS: string
+    ----------------------------------------------------------------------------------------------------------
+    SALESORDERID: int64,CREATEDBY: int64,CREATEDAT: date32[day],CHANGEDBY: int64,CHANGEDAT: date32[day],FISCVARIANT: string,FISCALYEARPERIOD: int64,NOTEID: string,PARTNERID: int64,SALESORG: string,CURRENCY: string,GROSSAMOUNT: int64,NETAMOUNT: double,TAXAMOUNT: double,LIFECYCLESTATUS: string,BILLINGSTATUS: string,DELIVERYSTATUS: string
+    ----------------------------------------------------------------------------------------------------------
     Even the schema on attached to the parquet file is updated.
+    ----------------------------------------------------------------------------------------------------------
 
 
 
 
 
-    <pyarrow._parquet.ParquetSchema object at 0x126996f80>
+    <pyarrow._parquet.ParquetSchema object at 0x118e5cec0>
     required group field_id=-1 schema {
       optional int64 field_id=-1 SALESORDERID;
       optional int64 field_id=-1 CREATEDBY;
@@ -303,12 +337,14 @@ index = pyar.Schema.get_field_index(myschema, 'NOTEID')
 myschema = pyar.Schema.remove(myschema, index)
 
 print("the new updated schema --> removed the NOTEID \n")
+print('----------------------------------------------------------------------------------------------------------')
 updateParquetAndMetaData(df_salesOrder, myschema)
 
 ```
 
     the new updated schema --> removed the NOTEID 
     
+    ----------------------------------------------------------------------------------------------------------
     SALESORDERID: int64,CREATEDBY: int64,CREATEDAT: date32[day],CHANGEDBY: int64,CHANGEDAT: date32[day],FISCVARIANT: string,FISCALYEARPERIOD: int64,PARTNERID: int64,SALESORG: string,CURRENCY: string,GROSSAMOUNT: int64,NETAMOUNT: double,TAXAMOUNT: double,LIFECYCLESTATUS: string,BILLINGSTATUS: string,DELIVERYSTATUS: string
 
 
@@ -325,10 +361,12 @@ index = pyar.Schema.get_field_index(myschema, 'GROSSAMOUNT')
 myschema = pyar.Schema.set(myschema, index, pyar.field('GROSSAMOUNT', pyar.int32()))
 
 print(f"the new updated schema -> abover 3 columns would be updated to float from double")
+print('----------------------------------------------------------------------------------------------------------')
 updateParquetAndMetaData(df_salesOrder, myschema)
 ```
 
     the new updated schema -> abover 3 columns would be updated to float from double
+    ----------------------------------------------------------------------------------------------------------
     SALESORDERID: int64,CREATEDBY: int64,CREATEDAT: date32[day],CHANGEDBY: int64,CHANGEDAT: date32[day],FISCVARIANT: string,FISCALYEARPERIOD: int64,PARTNERID: int64,SALESORG: string,CURRENCY: string,GROSSAMOUNT: int32,NETAMOUNT: float,TAXAMOUNT: float,LIFECYCLESTATUS: string,BILLINGSTATUS: string,DELIVERYSTATUS: string
 
 
@@ -345,7 +383,7 @@ Query Performance: Lookups are faster as the data is compact and indices are use
 #### When to use??? Use for columns with low cardinality and high repetition (use_dictionary parameter).
 
 Step 1: Dataframe.astype('category') will automatically convert to catagory 
-Step 2:  pyar.field('LIFECYCLESTATUS', pyar.dictionary(pyar.int8(), pyar.utf8())) to define the category
+Step 2: pyar.field('LIFECYCLESTATUS', pyar.dictionary(pyar.int8(), pyar.utf8())) to define the category
 
 
 
@@ -366,10 +404,12 @@ index = pyar.Schema.get_field_index(myschema, 'SALESORG')
 myschema = pyar.Schema.set(myschema, index, pyar.field('SALESORG', pyar.dictionary(pyar.int8(), pyar.utf8())))
 
 print(f"We can see the columns are updated to a dictionary")
+print('----------------------------------------------------------------------------------------------------------')
 updateParquetAndMetaData(df_salesOrder, myschema)
 ```
 
     We can see the columns are updated to a dictionary
+    ----------------------------------------------------------------------------------------------------------
     SALESORDERID: int64,CREATEDBY: int64,CREATEDAT: date32[day],CHANGEDBY: int64,CHANGEDAT: date32[day],FISCVARIANT: string,FISCALYEARPERIOD: int64,PARTNERID: int64,SALESORG: dictionary<values=string, indices=int8, ordered=0>,CURRENCY: string,GROSSAMOUNT: int32,NETAMOUNT: float,TAXAMOUNT: float,LIFECYCLESTATUS: dictionary<values=string, indices=int8, ordered=0>,BILLINGSTATUS: dictionary<values=string, indices=int8, ordered=0>,DELIVERYSTATUS: dictionary<values=string, indices=int8, ordered=0>
 
 
@@ -397,344 +437,52 @@ pyarpq.write_table(
 
 ## Best Practice 3  Partitioning
 Partitioning Strategy: Design your schema to include partition columns that make sense for your queries. Common partition columns are dates, geographic regions, or user IDs.
+
 Balance Partition Size: Ensure that partitions are neither too large nor too small. Aim for a partition size that strikes a balance between query performance and manageability.
 
+We will split fiscal year which is a yyyy0mm format and partition it year and month. This is very typical.
+
+Step 1: spliting the FISCALYEARPERIOD into Month and year
+Step 2: Now we are going to update the schema with Fiscalyear and Fiscal month.
+Step 3: Generate Table from DF
+Step 4: write_to_dataset and mention and mention partitions.
+
+
 
 ```python
+# spliting the FISCALYEARPERIOD into Month and year
+# Also we will remove the FISCALYEARPERIOD column
 df_salesOrder[['FISCALYEAR', 'FISCALMONTH']] = df_salesOrder['FISCALYEARPERIOD'].apply(lambda x: pd.Series([int(str(x)[:4]), int(str(x)[5:])])  )
-# Define the partitioning columns based on date1
-df_salesOrder = df_salesOrder.drop(['FISCALYEARPERIOD'],axis = 1)
-df_salesOrder
-
-```
-
-
-
-
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>SALESORDERID</th>
-      <th>CREATEDBY</th>
-      <th>CREATEDAT</th>
-      <th>CHANGEDBY</th>
-      <th>CHANGEDAT</th>
-      <th>FISCVARIANT</th>
-      <th>PARTNERID</th>
-      <th>SALESORG</th>
-      <th>CURRENCY</th>
-      <th>GROSSAMOUNT</th>
-      <th>NETAMOUNT</th>
-      <th>TAXAMOUNT</th>
-      <th>LIFECYCLESTATUS</th>
-      <th>BILLINGSTATUS</th>
-      <th>DELIVERYSTATUS</th>
-      <th>FISCALYEAR</th>
-      <th>FISCALMONTH</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>500000000</td>
-      <td>4</td>
-      <td>2018-01-11</td>
-      <td>4</td>
-      <td>2018-01-16</td>
-      <td>K4</td>
-      <td>100000022</td>
-      <td>APJ</td>
-      <td>USD</td>
-      <td>13587</td>
-      <td>11888.625</td>
-      <td>1698.375</td>
-      <td>C</td>
-      <td>C</td>
-      <td>C</td>
-      <td>2018</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>500000001</td>
-      <td>2</td>
-      <td>2018-01-12</td>
-      <td>2</td>
-      <td>2018-01-15</td>
-      <td>K4</td>
-      <td>100000026</td>
-      <td>EMEA</td>
-      <td>USD</td>
-      <td>12622</td>
-      <td>11044.250</td>
-      <td>1577.750</td>
-      <td>C</td>
-      <td>C</td>
-      <td>C</td>
-      <td>2018</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>500000002</td>
-      <td>5</td>
-      <td>2018-01-15</td>
-      <td>5</td>
-      <td>2018-01-20</td>
-      <td>K4</td>
-      <td>100000018</td>
-      <td>APJ</td>
-      <td>USD</td>
-      <td>45655</td>
-      <td>39948.125</td>
-      <td>5706.875</td>
-      <td>C</td>
-      <td>C</td>
-      <td>C</td>
-      <td>2018</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>500000003</td>
-      <td>3</td>
-      <td>2018-01-15</td>
-      <td>3</td>
-      <td>2018-01-20</td>
-      <td>K4</td>
-      <td>100000009</td>
-      <td>EMEA</td>
-      <td>USD</td>
-      <td>101786</td>
-      <td>89062.750</td>
-      <td>12723.250</td>
-      <td>C</td>
-      <td>C</td>
-      <td>C</td>
-      <td>2018</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>500000004</td>
-      <td>8</td>
-      <td>2018-01-16</td>
-      <td>8</td>
-      <td>2018-01-17</td>
-      <td>K4</td>
-      <td>100000025</td>
-      <td>EMEA</td>
-      <td>USD</td>
-      <td>71684</td>
-      <td>62723.500</td>
-      <td>8960.500</td>
-      <td>C</td>
-      <td>C</td>
-      <td>C</td>
-      <td>2018</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>...</th>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-    </tr>
-    <tr>
-      <th>329</th>
-      <td>500000329</td>
-      <td>7</td>
-      <td>2019-06-19</td>
-      <td>7</td>
-      <td>2019-06-20</td>
-      <td>K4</td>
-      <td>100000031</td>
-      <td>AMER</td>
-      <td>USD</td>
-      <td>90621</td>
-      <td>79293.375</td>
-      <td>11327.625</td>
-      <td>I</td>
-      <td>I</td>
-      <td>C</td>
-      <td>2019</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <th>330</th>
-      <td>500000330</td>
-      <td>11</td>
-      <td>2019-06-22</td>
-      <td>11</td>
-      <td>2019-06-26</td>
-      <td>K4</td>
-      <td>100000000</td>
-      <td>AMER</td>
-      <td>USD</td>
-      <td>113871</td>
-      <td>99637.125</td>
-      <td>14233.875</td>
-      <td>I</td>
-      <td>I</td>
-      <td>C</td>
-      <td>2019</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <th>331</th>
-      <td>500000331</td>
-      <td>3</td>
-      <td>2019-06-25</td>
-      <td>3</td>
-      <td>2019-06-26</td>
-      <td>K4</td>
-      <td>100000009</td>
-      <td>EMEA</td>
-      <td>USD</td>
-      <td>12693</td>
-      <td>11106.375</td>
-      <td>1586.625</td>
-      <td>I</td>
-      <td>I</td>
-      <td>I</td>
-      <td>2019</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <th>332</th>
-      <td>500000332</td>
-      <td>13</td>
-      <td>2019-06-27</td>
-      <td>13</td>
-      <td>2019-07-01</td>
-      <td>K4</td>
-      <td>100000034</td>
-      <td>AMER</td>
-      <td>USD</td>
-      <td>70528</td>
-      <td>61712.000</td>
-      <td>8816.000</td>
-      <td>I</td>
-      <td>I</td>
-      <td>C</td>
-      <td>2019</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <th>333</th>
-      <td>500000333</td>
-      <td>5</td>
-      <td>2019-06-27</td>
-      <td>5</td>
-      <td>2019-07-01</td>
-      <td>K4</td>
-      <td>100000022</td>
-      <td>APJ</td>
-      <td>USD</td>
-      <td>16576</td>
-      <td>14504.000</td>
-      <td>2072.000</td>
-      <td>I</td>
-      <td>I</td>
-      <td>I</td>
-      <td>2019</td>
-      <td>6</td>
-    </tr>
-  </tbody>
-</table>
-<p>334 rows × 17 columns</p>
-</div>
-
-
-
-
-```python
-table_SalesOrder = pyar.Table.from_pandas(df_salesOrder)
-partition_cols = ['FISCALYEAR', 'FISCALMONTH']
-# Write the table to Parquet partitioned by 'partition_year' and 'partition_month'
-# Write the table to a Parquet file with partitioning
-
+# Now we are going to update the schema with Fiscalyear and Fiscal month. They will not be columns but folders
+new_fields =[ pyar.field('FISCALYEAR',pyar.int64()),
+                                    pyar.field('FISCALMONTH',pyar.int64())
+                                    ]
+# Combine existing fields with new fields
+myschema = pyar.schema(list(myschema) + new_fields)
+df_salesOrder = df_salesOrder.drop(['FISCALYEARPERIOD'], axis = 1);
 # removing the column from the meta data too.
 index = pyar.Schema.get_field_index(myschema, 'FISCALYEARPERIOD')
 myschema = pyar.Schema.remove(myschema, index)
-myschema = pyar.Schema.append(myschema, pyar.field('FISCALYEAR',pyar.int32()))
-myschema = pyar.Schema.append(myschema, pyar.field('FISCALMONTH',pyar.int32()))
+# Generate Table from DF
+table_SalesOrder = pyar.Table.from_pandas(df_salesOrder, myschema )
+partition_cols = ['FISCALYEAR', 'FISCALMONTH']
 pyarpq.write_to_dataset(
     table_SalesOrder,
     root_path='SalerOrderPartition',
-    partition_cols= partition_cols,
     use_dictionary=['SALESORG','LIFECYCLESTATUS','BILLINGSTATUS','DELIVERYSTATUS'],  # Specify dictionary encoding for the 'category' column
+    compression='SNAPPY',  # Use compression for better storage efficiency
+    partition_cols= partition_cols,
     schema = myschema
-    compression='snappy'  # Optional: Use compression for storage efficiency
 )
-
+pyarpq.write_metadata(myschema,'Data/SalesOrders.metadata')
+# print schema
+updatedSchema = myschema.to_string().replace('\n',',')
+print(f"Updated Schema \n {updatedSchema}")
+df_salesOrder.head(3)
 ```
 
-
-```python
-# Define the path to the partitioned dataset
-dataset_path = 'SalerOrderPartition/'
-
-# Create a dataset object
-dataset = pyards.dataset(dataset_path, format='parquet', partitioning='hive')
-
-# Convert to a table and then to a pandas DataFrame
-table = dataset.to_table()
-print(table.schema)
-df = table.to_pandas()
-
-# Display the DataFrame
-df.head(3)
-```
-
-    SALESORDERID: int64
-    CREATEDBY: int64
-    CREATEDAT: timestamp[ns]
-    CHANGEDBY: int64
-    CHANGEDAT: timestamp[ns]
-    FISCVARIANT: string
-    PARTNERID: int64
-    SALESORG: dictionary<values=string, indices=int32, ordered=0>
-    CURRENCY: string
-    GROSSAMOUNT: int64
-    NETAMOUNT: double
-    TAXAMOUNT: double
-    LIFECYCLESTATUS: dictionary<values=string, indices=int32, ordered=0>
-    BILLINGSTATUS: dictionary<values=string, indices=int32, ordered=0>
-    DELIVERYSTATUS: dictionary<values=string, indices=int32, ordered=0>
-    FISCALYEAR: int32
-    FISCALMONTH: int32
-    -- schema metadata --
-    pandas: '{"index_columns": [{"kind": "range", "name": null, "start": 0, "' + 2460
+    Updated Schema 
+     SALESORDERID: int64,CREATEDBY: int64,CREATEDAT: date32[day],CHANGEDBY: int64,CHANGEDAT: date32[day],FISCVARIANT: string,PARTNERID: int64,SALESORG: dictionary<values=string, indices=int8, ordered=0>,CURRENCY: string,GROSSAMOUNT: int32,NETAMOUNT: float,TAXAMOUNT: float,LIFECYCLESTATUS: dictionary<values=string, indices=int8, ordered=0>,BILLINGSTATUS: dictionary<values=string, indices=int8, ordered=0>,DELIVERYSTATUS: dictionary<values=string, indices=int8, ordered=0>,FISCALYEAR: int64,FISCALMONTH: int64
 
 
 
@@ -842,57 +590,220 @@ df.head(3)
 </table>
 </div>
 
+![image](https://github.com/nuneskris/nuneskris.github.io/assets/82786764/e248b65d-d0e1-49d8-9a31-5b2669cd1c23)
 
 
 
-```python
-# Convert the DataFrame to a PyArrow Table
-# Write the table to a Parquet file
-# Convert the PyArrow Table to a Pandas DataFrame
-table = pyar.Table.from_pandas(df, preserve_index=False)
-strschema = table.schema.to_string();
-print(strschema)
-
-```
-
-1. Understand Your Data and Queries
-Analyze Data Characteristics: Understand the types of data you are working with, including data types, data distribution, and frequency of updates.
-Identify Query Patterns: Analyze the types of queries you will run most frequently. Identify which columns are often filtered, aggregated, or joined.
-
-3. Columnar Storage Benefits
-Optimize for Columnar Storage: Since Parquet is a columnar storage format, design your schema to take advantage of this. Group columns that are frequently queried together.
-Reduce Redundancy: Avoid storing redundant data. Normalize your schema to reduce duplication, but balance it with the need for efficient querying.
-4. Nested Data Structures
+## Best Practice 4  Nested Data Structures
 Use Nested Structures: Parquet supports complex nested data structures (e.g., maps, arrays, structs). Use them to represent hierarchical data more efficiently.
 Flatten When Necessary: If nested structures complicate querying, consider flattening the schema.
-
-
-# 1. Schema Design
-
-
-
-
-## Normalized Data Makes Life Easy
+##### Normalized Data Makes Life Easy
 Avoid excessive nesting. Deeply nested structures can be harder to query and may impact performance. Normalize your data where possible.
-### When to Nest Data: 
+##### When to Nest Data: 
 1. When columns are always accessed together, nesting can make sense.
 2. Read-heavy where performance if impacted because of the need for joins.
 3. Self-Contained Data
-### When to Normalize:
+##### When to Normalize:
 1. For nested structures, use struct, list, or map types where appropriate.
 1. If nesting leads to significant data redundancy (e.g., repeating user information for every order)
 2. When down stream systems need to process data. ETL pipelines work better with normalized tables
 3. When nested data have relationships with other data entities which are independently managed or queried.
 
+Reduce Redundancy: Avoid storing redundant data. 
+Normalize your schema to reduce duplication, but balance it with the need for efficient querying.
+
+To demonstrate Nesting we will Nest the Business partners and Address. Another typical usecase
+
+Step 1: To make this convenient, I set a prefix on these columns and so that they can be easily identified and then removed once the df is merged.
+Step 2: Merging the dataframe
+Step 3: create Dictionary for the nested df (format required for the nesting)
+Step 4: Drop the of the uneeed columns
+Step 5: Update new schema with struct data type
+Step 6: generate parquet
+
+
+```python
+df_BusinessPartners = pd.read_csv('Data/BusinessPartners.csv')
+df_Addresses = pd.read_csv('Data/Addresses.csv')
+# creating a prefix
+for col in df_Addresses.columns:
+    df_Addresses.rename(columns = {col:'Addresses_'+col}, inplace = True)
+df_Addresses['ADDRESSID'] = df_Addresses['Addresses_ADDRESSID'].copy()
+# Merging the dataframe
+merged_df = pd.merge(df_BusinessPartners, df_Addresses, on='ADDRESSID')
+```
+
+
+```python
+
+def nestColumn(X):
+    nested = {};
+    for col in df_Addresses.columns:
+        if('Addresses_' in col ):
+            nested.update({col.replace('Addresses_',''): X[col]})
+    return nested
+# create Dictionary for the nested df (format required for the nesting)
+merged_df['ADDRESS'] = merged_df.apply(
+    lambda row: 
+        nestColumn(row)
+    ,
+    axis=1
+)
+for col in merged_df.columns:
+    if('Addresses_' in col ):
+        merged_df = merged_df.drop(columns = [col], axis= 1)
+
+merged_df = merged_df.drop(columns='ADDRESSID', axis = 1)
+
+merged_df.head(2)
+```
 
 
 
-# Schema Evolution 
 
-6. Schema Evolution
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>PARTNERID</th>
+      <th>PARTNERROLE</th>
+      <th>EMAILADDRESS</th>
+      <th>PHONENUMBER</th>
+      <th>FAXNUMBER</th>
+      <th>WEBADDRESS</th>
+      <th>COMPANYNAME</th>
+      <th>LEGALFORM</th>
+      <th>CREATEDBY</th>
+      <th>CREATEDAT</th>
+      <th>CHANGEDBY</th>
+      <th>CHANGEDAT</th>
+      <th>CURRENCY</th>
+      <th>ADDRESS</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>100000000</td>
+      <td>2</td>
+      <td>maria.brown@all4bikes.com</td>
+      <td>622734567</td>
+      <td>NaN</td>
+      <td>http://www.all4bikes.com</td>
+      <td>All For Bikes</td>
+      <td>Inc.</td>
+      <td>10</td>
+      <td>20181003</td>
+      <td>10</td>
+      <td>20181003</td>
+      <td>USD</td>
+      <td>{'ADDRESSID': 1000000034, 'CITY': 'West Nyack'...</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>100000001</td>
+      <td>2</td>
+      <td>bob.buyer@amazebikes.com</td>
+      <td>3088530</td>
+      <td>NaN</td>
+      <td>http://www.amazebikes.com</td>
+      <td>Amaze Bikes Inc</td>
+      <td>Inc.</td>
+      <td>13</td>
+      <td>20181003</td>
+      <td>13</td>
+      <td>20181003</td>
+      <td>USD</td>
+      <td>{'ADDRESSID': 1000000035, 'CITY': 'Fair Oaks',...</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
+```python
+
+# Paths to the .metadata files
+metadata_pathbp = 'Data/BusinessPartners.metadata'
+metadata_patha = 'Data/Addresses.metadata'
+
+# Read the metadata
+metadatabp = pyarpq.read_metadata(metadata_pathbp)
+metadataa = pyarpq.read_metadata(metadata_patha)
+
+# Extract the schemas from the metadata
+schemaso = metadatabp.schema.to_arrow_schema()
+schemasoI = metadataa.schema.to_arrow_schema()
+
+new_fields =[ pyar.field('ADDRESS',pyar.struct(list(schemasoI))) ]
+# Combine existing fields with new fields
+myschema_businessPartners = pyar.schema(list(schemaso) + new_fields)
+# removing the column from the meta data too.
+index = pyar.Schema.get_field_index(myschema_businessPartners, 'ADDRESSID')
+myschema_businessPartners = pyar.Schema.remove(myschema_businessPartners, index)
+print(f"Updated Schema \n ----------------------------------------------------------------- \n{myschema_businessPartners}")
+
+```
+
+    Updated Schema 
+     ----------------------------------------------------------------- 
+    PARTNERID: int64
+    PARTNERROLE: int64
+    EMAILADDRESS: string
+    PHONENUMBER: int64
+    FAXNUMBER: string
+    WEBADDRESS: string
+    COMPANYNAME: string
+    LEGALFORM: string
+    CREATEDBY: int64
+    CREATEDAT: int64
+    CHANGEDBY: int64
+    CHANGEDAT: int64
+    CURRENCY: string
+    ADDRESS: struct<ADDRESSID: int64, CITY: string, POSTALCODE: string, STREET: string, BUILDING: int64, COUNTRY: string, REGION: string, ADDRESSTYPE: int64, VALIDITY_STARTDATE: int64, VALIDITY_ENDDATE: int64, LATITUDE: double, LONGITUDE: double>
+      child 0, ADDRESSID: int64
+      child 1, CITY: string
+      child 2, POSTALCODE: string
+      child 3, STREET: string
+      child 4, BUILDING: int64
+      child 5, COUNTRY: string
+      child 6, REGION: string
+      child 7, ADDRESSTYPE: int64
+      child 8, VALIDITY_STARTDATE: int64
+      child 9, VALIDITY_ENDDATE: int64
+      child 10, LATITUDE: double
+      child 11, LONGITUDE: double
+
+
+
+```python
+table_BusinessPartners= pyar.Table.from_pandas(merged_df, myschema_businessPartners )
+pyarpq.write_table(
+    table_BusinessPartners,
+    'Data/BusinessPartners.parquet'
+)
+pyarpq.write_metadata(myschema_businessPartners,'Data/BusinessPartners.metadata')
+```
+
+# ## Best Practice 5 Schema Evolution 
 Plan for Changes: Design your schema to be flexible for future changes. Parquet supports schema evolution, allowing you to add or modify columns without breaking existing queries.
 Backward and Forward Compatibility: Ensure that changes to the schema maintain compatibility with existing data and applications.
-
 
 Schema evolution in Parquet refers to the capability of the Parquet file format to handle changes in the schema (structure) of the data over time without breaking compatibility with older data. This feature allows you to modify the schema, such as adding new columns or changing data types, while still being able to read and write data using the updated schema.
 
@@ -909,4 +820,249 @@ Benefits of Schema Evolution
 Flexibility: Allows the schema to evolve as the data requirements change over time without needing to rewrite all the historical data.
 Backward Compatibility: Ensures that older data can still be read with new schema versions.
 Forward Compatibility: Ensures that new data written with an updated schema can still be read by systems expecting the old schema.
+
+
+```python
+schema_ProductCategories = pyarpq.read_metadata('Data/ProductCategories.metadata').schema.to_arrow_schema()
+print(f"Schema for ProductCategories:\n{schema_ProductCategories}")
+df_ProductCategories = pd.read_parquet('Data/ProductCategories.parquet') 
+df_ProductCategories
+```
+
+    Schema for ProductCategories:
+    PRODCATEGORYID: string
+    CREATEDBY: int64
+    CREATEDAT: int64
+
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>PRODCATEGORYID</th>
+      <th>CREATEDBY</th>
+      <th>CREATEDAT</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>RO</td>
+      <td>12</td>
+      <td>20181003</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>BX</td>
+      <td>4</td>
+      <td>20181003</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>CC</td>
+      <td>7</td>
+      <td>20181003</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>MB</td>
+      <td>11</td>
+      <td>20181003</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>RC</td>
+      <td>9</td>
+      <td>20181003</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>DB</td>
+      <td>8</td>
+      <td>20181003</td>
+    </tr>
+    <tr>
+      <th>6</th>
+      <td>EB</td>
+      <td>11</td>
+      <td>20181003</td>
+    </tr>
+    <tr>
+      <th>7</th>
+      <td>CB</td>
+      <td>10</td>
+      <td>20181003</td>
+    </tr>
+    <tr>
+      <th>8</th>
+      <td>HB</td>
+      <td>6</td>
+      <td>20181003</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
+```python
+# Updated DataFrame with new column 'PRODUCTMARKET'
+df_updated = pd.DataFrame({
+    'PRODCATEGORYID': ['BO', 'GA'],
+    'CREATEDBY': [2, 3],
+    'CREATEDAT': [20191003, 20191003],
+    'PRODUCTMARKET': ['B2B', 'B2C'],
+})
+
+new_fields =[ pyar.field('PRODUCTMARKET',pyar.string()) ]
+# Combine existing fields with new fields
+schema_ProductCategories = pyar.schema(list(schema_ProductCategories) + new_fields)
+
+# Convert to PyArrow Table and write to Parquet with updated schema
+tableUpdated = pyar.Table.from_pandas(df_updated, schema_ProductCategories)
+# Read the original Parquet file
+original_table = pyarpq.read_table('Data/ProductCategories.parquet')
+# Concatenate the original and updated tables
+
+combined_table = pyar.concat_tables([original_table, tableUpdated],  promote_options="default")
+pyarpq.write_table(combined_table, 'Data/ProductCategories.parquet')
+
+```
+
+
+```python
+df_ProductCategories = pd.read_parquet('Data/ProductCategories.parquet') 
+df_ProductCategories
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>PRODCATEGORYID</th>
+      <th>CREATEDBY</th>
+      <th>CREATEDAT</th>
+      <th>PRODUCTMARKET</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>RO</td>
+      <td>12</td>
+      <td>20181003</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>BX</td>
+      <td>4</td>
+      <td>20181003</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>CC</td>
+      <td>7</td>
+      <td>20181003</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>MB</td>
+      <td>11</td>
+      <td>20181003</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>RC</td>
+      <td>9</td>
+      <td>20181003</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>DB</td>
+      <td>8</td>
+      <td>20181003</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>6</th>
+      <td>EB</td>
+      <td>11</td>
+      <td>20181003</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>7</th>
+      <td>CB</td>
+      <td>10</td>
+      <td>20181003</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>8</th>
+      <td>HB</td>
+      <td>6</td>
+      <td>20181003</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>9</th>
+      <td>BO</td>
+      <td>2</td>
+      <td>20191003</td>
+      <td>B2B</td>
+    </tr>
+    <tr>
+      <th>10</th>
+      <td>GA</td>
+      <td>3</td>
+      <td>20191003</td>
+      <td>B2C</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
 
