--- a/_posts/2024-06-01-post-1.md
+++ b/_posts/2024-06-01-post-1.md
@@ -1,6 +1,6 @@
 ---
-title: 'SpaceTitanic|Pipeline|Model Impute|81 score|'
-date: 2024-06-14
+title: SpaceTitanic|Pipeline|Model Impute|81 score|
+date: 2024-06-01
 permalink: /posts/2012/08/blog-post-4/
 tags:
   - cool posts
